Fixed login page responsive design on mobile

--- a/src/pages/private/styles/profile.scss
+++ b/src/pages/private/styles/profile.scss
@@ -10,5 +10,3 @@
   }
 }
 
-@media screen and (max-width: 850px) {
-}
